<resources>
    <string name="app_name">Legal Cases</string>
    <string name="title">TITLE:</string>
    <string name="courtName">COURT NAME:</string>
    <string name="courtType">COURT TYPE:</string>
    <string name="case_no">CASE NO:</string>
    <string name="projectName">PROJECT NAME:</string>
    <string name="RO">HQ/RO:</string>
    <string name="case_filing_date">CASE FILING DATE:</string>
    <string name="brief_history">BRIEF HISTORY:</string>
    <string name="status_head">STATUS HEAD:</string>
    <string name="next_hearing_date">NEXT HEARING DATE:</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">open drawer</string>
    <string name="nav_close">close drawer</string>
    <string name="save">Save</string>
    <string name="legal_professiona">CONCERNED LEGAL PROFESSIONAL FROM NHIDCL:</string>
    <string name="office">CONCERNED OFFICER OF NHIDCL:</string>
    <string name="advocate_law_firm">ADVOCATE/LAW FIRM:</string>
    <string name="total_claim_amount">TOTAL CLAIM AMOUNT IN RS.:</string>
    <string name="last_hearing_date">LAST HEARING DATE:</string>
    <string name="listed_for">LISTED FOR:</string>
    <string name="concerned_state">CONCERNED STATE:</string>
    <string name="concerned_ro">CONCERNED RO:</string>

    <string-array name="filter">
        <item>	SELECT	</item>
        <item>	LIMBS NO	</item>
        <item> HQ/RO </item>
        <item>	COURT TYPE</item>
        <item>	CASE NO	</item>
        <item> TITLE </item>
        <item> CONCERNED RO </item>
        <item> PROJECT NAME</item>
        <item> ADVOCATE/LAW FIRM</item>
        <item>	CASE FILING DATE	</item>
        <item> STATUS HEAD </item>
        <item> TOTAL CLAIM AMOUNT </item>
        <item> LAST HEARING DATE </item>
        <item> CONCERNED LEGAL PROFESSIONAL OF NHIDCL </item>
        <item> NEXT HEARING DATE </item>
    </string-array>
    <string-array name="States">
        <item>	HQ	</item>
        <item>	Tripura	</item>
        <item> Uttarakhand </item>
        <item>	Nagaland </item>
        <item>	Sikkim	</item>
        <item> Ladakh </item>
        <item> Andaman </item>
        <item> Manipur </item>
        <item>	Meghalaya </item>
        <item> Assam </item>
        <item> Mizoram </item>
        <item> J&amp;K </item>
        <item> Mizoram </item>
        <item> Arunachal Pradesh </item>
        <item> Andaman and Nicobar </item>
        <item> Punjab </item>
        <item> Haryana </item>
        <item> West Bengal </item>
    </string-array>
    <string-array name="RO">
        <item> "New Delhi" </item>
        <item> "Ro-Leh/Srinagar" </item>
        <item> "RO-Port Blair" </item>
        <item> "RO-Agartala" </item>
        <item> "RO-Aizwal" </item>
        <item> "RO-Dehradun" </item>
        <item> "RO-Gangtok" </item>
        <item> "RO-Guwahati" </item>
        <item> "RO-Imphal" </item>
        <item> "RO-Itanagar" </item>
        <item> "RO-Jammu" </item>
        <item> "RO-Kohima" </item>
        <item> "RO-LADAKH" </item>
        <item> "RO-Shillong" </item>
        <item> "RO-SRINAGAR" </item>
    </string-array>

</resources>